--- a/settings.example.json
+++ b/settings.example.json
@@ -1,13 +1,13 @@
 {
   "bot-account": {
-    "username": "7bt afk bot",
+    "username": "YourBotUsername",
     "password": "",
     "type": "mojang"
   },
 
   "server": {
-    "ip": "7btxd.aternos.me",
-    "port": 51399,
+    "ip": "your.server.ip",
+    "port": 25565,
     "version": "1.12.2"
   },
   
@@ -39,6 +39,6 @@
 
     "chat-log": false,
     "auto-reconnect": true,
-    "auto-reconnect-delay": 15000
+    "auto-reconnect-delay": 30000
   }
 }
